objects/pw_cc__SubCountry__c.object
<CustomObject>
    <description>Pre v1.7 State object now deprecated to allow for new features, please migrate your data to the new State object and disregard.</description>
    <fields>
        <fullName>pw_cc__AlternativeNames__c</fullName>
        <description>A pipe (&quot; | &quot;) delimited list of alternative names to detect for this sub country</description>
        <inlineHelpText>Enter each alternative name with a pipe (&quot; | &quot;) inbetween.</inlineHelpText>
        <label>Alternative Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>pw_cc__Country__c</referenceTo>
        <relationshipName>SubCountries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__FullIsoCode__c</fullName>
        <description>The fully qualified ISO code for this sub-country.  Contains Country ISO code.</description>
        <externalId>true</externalId>
        <label>Full ISO Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pw_cc__IsoCode__c</fullName>
        <label>ISO Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__ParentCountryIsoCode__c</fullName>
        <label>Parent Country ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__RegionalDivision__c</fullName>
        <label>Regional Division</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__TrimmedName__c</fullName>
        <description>Takes the first 20 characters of the state name which ensures the right length for inserting into standard state fields.</description>
        <formula>LEFT( Name, 20 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trimmed Name</label>
        <type>Text</type>
    </fields>
    <label>State (obsolete)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States (obsolete)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>